add information to Node and Search

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,1 @@
-/Agent.class
-/State.class
-/commandsFile.txt
-/finalMapFile.txt
-/logFile.txt
-/mapFile.txt
-/Search.class
-/Node.class
+/Test.class
